What's new in PyObjC
====================

An overview of the relevant changes in new, and older, releases.

Version 3.0
-----------

* ``inspect.signature`` works for all functions and methods implemented in C,
  when using Python 3.4 or later.

* The module ``PyObjCTools.NibClassBuilder`` is not longer available. It only worked
  with ancient versions of Interface Builder (pre-Xcode)

* The wrapper type for opaque pointers didn't have a "__module__" attribute,
  which breaks code that (correctly) assumes that all types have such an attribute.

* Archiving now supports nested definitions and method references, simular
  to the support of those added to pickle protocol 4 in Python 3.4.

  Encoding nested classes requires support for the ``__qualname__`` attribute,
  and hence requires Python 3.3. Decoding should work with earlier python
  versions as well.

* Addd ``objc.autorelease_pool``, a context manager for managing an
  autorelease pool. Usage::

       with objc.autorelease_pool():
          pass


  This is equivalent to::

       _pool = NSAutoreleasePool.alloc().init()
       try:
           pass

       finally:
           del _pool

* Added ``objc.registerABCForClass`` to make it possible to register
  a class with a number of ABC classes when the class becomes available.

* ``NSDecimalNumber`` can now be instantatiated as a normal Python object::

     value = NSDecimalNumber(4)

* ``NSData`` and ``NSMutableData`` can now be instantiated as a normal
  Python object::

      value = NSData(someBytes)

   or::

      value = NSData()

* ``NSDecimal`` now coerces the other value to ``NSDecimal`` in coercions.
  Because of you can now order instances of ``NSDecimal`` and ``int``.

* ``PyObjCTools.KeyValueCoding.ArrayOperators`` and
  ``PyObjCTools.KeyValueCoding.arrayOperators`` were accidently public
  names in previous releases, and are now removed. Use the array operators
  in the KVC protocol instead.
